tests/ui/discord-frontend/entity_macro/expected_literal_14.stderr
error: unexpected end of input, expected string literal
  --> tests/ui/discord-frontend/entity_macro/expected_literal_14.rs:40:52
   |
LL |     relates = [multiple "MemberEntity": via "id" as]
   |                                                    ^

error: aborting due to 1 previous error

